--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,12 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^5.5|^7.0",
-    "illuminate/support": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/console": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/database": "^5.2|^6.0|^7.0|^8.0",
-    "illuminate/filesystem": "^5.2|^6.0|^7.0|^8.0"
-  },
-  "require-dev": {
-    "mockery/mockery": "0.9.*"
-  },
+    "php": "^7.0|^8.0",
+    "illuminate/support": "^7.0|^8.0",
+    "illuminate/console": "^7.0|^8.0",
+    "illuminate/database": "^7.0|^8.0",
+    "illuminate/filesystem": "^7.0|^8.0"
+  }, 
   "autoload": {
     "psr-0": {
       "heimabailang\\LaravelSettings\\": "src/"
